fix: page before z-index

--- a/public/css/tours.css
+++ b/public/css/tours.css
@@ -83,9 +83,7 @@ header {
   text-decoration: none;
 }
 
-.logo img {
-  height: 50px;
-}
+.logo img { height: 50px; }
 
 .logo-text span {
   display: block;
